// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardAssetItem Component handles test network correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                CardAssetItem
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TouchableOpacity
                      disabled={true}
                      onLongPress={[Function]}
                      onPress={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "height": 64,
                        }
                      }
                      testID="asset-ETH"
                    >
                      <View
                        onLayout={[Function]}
                        style={
                          {
                            "alignSelf": "flex-start",
                            "marginTop": 12,
                            "position": "relative",
                          }
                        }
                        testID="badge-wrapper-badge"
                      >
                        <View>
                          <RemoteImage
                            fadeIn={true}
                            onError={[Function]}
                            source={1}
                            style={
                              [
                                {
                                  "borderRadius": 12,
                                  "height": 24,
                                  "width": 24,
                                },
                                undefined,
                                false,
                                false,
                                {
                                  "borderRadius": 20,
                                  "height": 40,
                                  "overflow": "hidden",
                                  "width": 40,
                                },
                              ]
                            }
                            testID="Ethereum"
                          />
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "aspectRatio": 1,
                              "bottom": 0,
                              "height": 0,
                              "justifyContent": "center",
                              "position": "absolute",
                              "right": 0,
                              "transform": [
                                {
                                  "translateX": 0,
                                },
                                {
                                  "translateY": 0,
                                },
                              ],
                            }
                          }
                        >
                          <View
                            onLayout={[Function]}
                            style={
                              {
                                "alignItems": "center",
                                "aspectRatio": 1,
                                "height": "50%",
                                "justifyContent": "center",
                                "maxHeight": 24,
                                "minHeight": 8,
                                "opacity": 0,
                              }
                            }
                            testID="badgenetwork"
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "backgroundColor": "#ffffff",
                                  "borderColor": "#ffffff",
                                  "borderRadius": 8,
                                  "borderWidth": 2,
                                  "height": 32,
                                  "justifyContent": "center",
                                  "overflow": "hidden",
                                  "shadowColor": "#0000001a",
                                  "shadowOffset": {
                                    "height": 2,
                                    "width": 0,
                                  },
                                  "shadowOpacity": 1,
                                  "shadowRadius": 4,
                                  "transform": [
                                    {
                                      "scale": 1,
                                    },
                                  ],
                                  "width": 32,
                                }
                              }
                            >
                              <Image
                                onError={[Function]}
                                resizeMode="contain"
                                source={
                                  {
                                    "uri": "https://example.com/testnet.png",
                                  }
                                }
                                style={
                                  {
                                    "height": 32,
                                    "width": 32,
                                  }
                                }
                                testID="network-avatar-image"
                              />
                            </View>
                          </View>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "flex": 1,
                            "justifyContent": "center",
                            "marginLeft": 20,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "flexDirection": "row",
                              "marginBottom": 8,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#121314",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            Ethereum
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-end",
                            "flexShrink": 0,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="balance-test-id"
                        >
                          $3,000.00
                        </Text>
                        <TouchableOpacity
                          disabled={true}
                          onPress={[Function]}
                          testID="secondary-balance-button-test-id"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 14,
                                "letterSpacing": 0,
                                "lineHeight": 22,
                                "paddingHorizontal": 0,
                              }
                            }
                            testID="secondary-balance-test-id"
                          >
                            1000000000000000000 ETH
                          </Text>
                        </TouchableOpacity>
                      </View>
                    </TouchableOpacity>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`CardAssetItem Component renders non-native token and matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                CardAssetItem
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TouchableOpacity
                      disabled={true}
                      onLongPress={[Function]}
                      onPress={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "height": 64,
                        }
                      }
                      testID="asset-USDC"
                    >
                      <View
                        onLayout={[Function]}
                        style={
                          {
                            "alignSelf": "flex-start",
                            "marginTop": 12,
                            "position": "relative",
                          }
                        }
                        testID="badge-wrapper-badge"
                      >
                        <View>
                          <View
                            style={
                              {
                                "backgroundColor": "#ffffff",
                                "borderRadius": 20,
                                "height": 40,
                                "overflow": "hidden",
                                "width": 40,
                              }
                            }
                          >
                            <Image
                              onError={[Function]}
                              resizeMode="contain"
                              source={
                                {
                                  "uri": "https://example.com/eth.png",
                                }
                              }
                              style={
                                {
                                  "flex": 1,
                                  "height": undefined,
                                  "width": undefined,
                                }
                              }
                              testID="token-avatar-image"
                            />
                          </View>
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "aspectRatio": 1,
                              "bottom": 0,
                              "height": 0,
                              "justifyContent": "center",
                              "position": "absolute",
                              "right": 0,
                              "transform": [
                                {
                                  "translateX": 0,
                                },
                                {
                                  "translateY": 0,
                                },
                              ],
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "flex": 1,
                            "justifyContent": "center",
                            "marginLeft": 20,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "flexDirection": "row",
                              "marginBottom": 8,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#121314",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            USD Coin
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-end",
                            "flexShrink": 0,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="balance-test-id"
                        >
                          $3,000.00
                        </Text>
                        <TouchableOpacity
                          disabled={true}
                          onPress={[Function]}
                          testID="secondary-balance-button-test-id"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 14,
                                "letterSpacing": 0,
                                "lineHeight": 22,
                                "paddingHorizontal": 0,
                              }
                            }
                            testID="secondary-balance-test-id"
                          >
                            1000000000000000000 USDC
                          </Text>
                        </TouchableOpacity>
                      </View>
                    </TouchableOpacity>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`CardAssetItem Component renders with all props and matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                CardAssetItem
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TouchableOpacity
                      disabled={true}
                      onLongPress={[Function]}
                      onPress={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "height": 64,
                        }
                      }
                      testID="asset-ETH"
                    >
                      <View
                        onLayout={[Function]}
                        style={
                          {
                            "alignSelf": "flex-start",
                            "marginTop": 12,
                            "position": "relative",
                          }
                        }
                        testID="badge-wrapper-badge"
                      >
                        <View>
                          <RemoteImage
                            fadeIn={true}
                            onError={[Function]}
                            source={1}
                            style={
                              [
                                {
                                  "borderRadius": 12,
                                  "height": 24,
                                  "width": 24,
                                },
                                undefined,
                                false,
                                false,
                                {
                                  "borderRadius": 20,
                                  "height": 40,
                                  "overflow": "hidden",
                                  "width": 40,
                                },
                              ]
                            }
                            testID="Ethereum"
                          />
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "aspectRatio": 1,
                              "bottom": 0,
                              "height": 0,
                              "justifyContent": "center",
                              "position": "absolute",
                              "right": 0,
                              "transform": [
                                {
                                  "translateX": 0,
                                },
                                {
                                  "translateY": 0,
                                },
                              ],
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "flex": 1,
                            "justifyContent": "center",
                            "marginLeft": 20,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "flexDirection": "row",
                              "marginBottom": 8,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#121314",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            Ethereum
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-end",
                            "flexShrink": 0,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="balance-test-id"
                        >
                          $3,000.00
                        </Text>
                        <TouchableOpacity
                          disabled={true}
                          onPress={[Function]}
                          testID="secondary-balance-button-test-id"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 14,
                                "letterSpacing": 0,
                                "lineHeight": 22,
                                "paddingHorizontal": 0,
                              }
                            }
                            testID="secondary-balance-test-id"
                          >
                            1000000000000000000 ETH
                          </Text>
                        </TouchableOpacity>
                      </View>
                    </TouchableOpacity>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`CardAssetItem Component renders with privacy mode enabled and matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                CardAssetItem
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TouchableOpacity
                      disabled={true}
                      onLongPress={[Function]}
                      onPress={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "height": 64,
                        }
                      }
                      testID="asset-ETH"
                    >
                      <View
                        onLayout={[Function]}
                        style={
                          {
                            "alignSelf": "flex-start",
                            "marginTop": 12,
                            "position": "relative",
                          }
                        }
                        testID="badge-wrapper-badge"
                      >
                        <View>
                          <RemoteImage
                            fadeIn={true}
                            onError={[Function]}
                            source={1}
                            style={
                              [
                                {
                                  "borderRadius": 12,
                                  "height": 24,
                                  "width": 24,
                                },
                                undefined,
                                false,
                                false,
                                {
                                  "borderRadius": 20,
                                  "height": 40,
                                  "overflow": "hidden",
                                  "width": 40,
                                },
                              ]
                            }
                            testID="Ethereum"
                          />
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "aspectRatio": 1,
                              "bottom": 0,
                              "height": 0,
                              "justifyContent": "center",
                              "position": "absolute",
                              "right": 0,
                              "transform": [
                                {
                                  "translateX": 0,
                                },
                                {
                                  "translateY": 0,
                                },
                              ],
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "flex": 1,
                            "justifyContent": "center",
                            "marginLeft": 20,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "flexDirection": "row",
                              "marginBottom": 8,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#121314",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            Ethereum
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-end",
                            "flexShrink": 0,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="balance-test-id"
                        >
                          •••••••••
                        </Text>
                        <TouchableOpacity
                          disabled={true}
                          onPress={[Function]}
                          testID="secondary-balance-button-test-id"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 14,
                                "letterSpacing": 0,
                                "lineHeight": 22,
                                "paddingHorizontal": 0,
                              }
                            }
                            testID="secondary-balance-test-id"
                          >
                            ••••••
                          </Text>
                        </TouchableOpacity>
                      </View>
                    </TouchableOpacity>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`CardAssetItem Component renders with required props and matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                CardAssetItem
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <TouchableOpacity
                      disabled={true}
                      onLongPress={[Function]}
                      onPress={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "height": 64,
                        }
                      }
                      testID="asset-ETH"
                    >
                      <View
                        onLayout={[Function]}
                        style={
                          {
                            "alignSelf": "flex-start",
                            "marginTop": 12,
                            "position": "relative",
                          }
                        }
                        testID="badge-wrapper-badge"
                      >
                        <View>
                          <RemoteImage
                            fadeIn={true}
                            onError={[Function]}
                            source={1}
                            style={
                              [
                                {
                                  "borderRadius": 12,
                                  "height": 24,
                                  "width": 24,
                                },
                                undefined,
                                false,
                                false,
                                {
                                  "borderRadius": 20,
                                  "height": 40,
                                  "overflow": "hidden",
                                  "width": 40,
                                },
                              ]
                            }
                            testID="Ethereum"
                          />
                        </View>
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "aspectRatio": 1,
                              "bottom": 0,
                              "height": 0,
                              "justifyContent": "center",
                              "position": "absolute",
                              "right": 0,
                              "transform": [
                                {
                                  "translateX": 0,
                                },
                                {
                                  "translateY": 0,
                                },
                              ],
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          {
                            "flex": 1,
                            "justifyContent": "center",
                            "marginLeft": 20,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "flexDirection": "row",
                              "marginBottom": 8,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="text"
                            numberOfLines={1}
                            style={
                              {
                                "color": "#121314",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            Ethereum
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          {
                            "alignItems": "flex-end",
                            "flexShrink": 0,
                          }
                        }
                      >
                        <Text
                          accessibilityRole="text"
                          style={
                            {
                              "color": "#121314",
                              "fontFamily": "Geist-Medium",
                              "fontSize": 16,
                              "letterSpacing": 0,
                              "lineHeight": 24,
                            }
                          }
                          testID="balance-test-id"
                        >
                          $3,000.00
                        </Text>
                        <TouchableOpacity
                          disabled={true}
                          onPress={[Function]}
                          testID="secondary-balance-button-test-id"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#686e7d",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 14,
                                "letterSpacing": 0,
                                "lineHeight": 22,
                                "paddingHorizontal": 0,
                              }
                            }
                            testID="secondary-balance-test-id"
                          >
                            1000000000000000000 ETH
                          </Text>
                        </TouchableOpacity>
                      </View>
                    </TouchableOpacity>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;
